gccida/g0/ix86_cc_mode
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/ix86_cc_mode/src/i386.c:7620:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode  ix86_cc_mode( rtx_code code, rtx op0, rtx op1) 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/ix86_cc_mode/src/i386.c:7620:29: error: must use 'enum' tag to refer to type 'rtx_code'
machine_mode  ix86_cc_mode( rtx_code code, rtx op0, rtx op1) 
                            ^
                            enum 
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/ix86_cc_mode/src/i386.c:7622:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode result; // eax 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/ix86_cc_mode/src/i386.c:7624:6: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
if ( mode_class_0[*( ( unsigned __int8 *)op0 + 2)] == MODE_FLOAT ) 
     ^~~~~~~~~~~~
     mode_class
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/ix86_cc_mode/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
4 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/ix86_cc_mode/src/obj/i386.o] Error 1
